...
        android:id="@+id/no_med_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/no_meds_message"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/goToAddBut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTxt"
        />

    <!--Reference: https://stackoverflow.com/questions/49080780/how-to-create-list-item-scroll-able-in-recycler-view-->
...
