<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="92dp"
        android:layout_height="71dp"
        android:layout_marginStart="159dp"
        android:layout_marginLeft="159dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:layout_marginBottom="8dp"
        android:text="Sign Up"
        app:layout_constraintBottom_toTopOf="@+id/goBack_MainPage_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordRegister_EditText" />

    <TextView
        android:id="@+id/register_textView"
        android:layout_width="219dp"
        android:layout_height="59dp"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:layout_marginBottom="41dp"
        android:gravity="center"
        android:text="Register"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/firstNameRegister_EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstNameRegister_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="102dp"
        android:layout_marginRight="102dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Enter your first name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/lastNameRegister_EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_textView" />

    <EditText
        android:id="@+id/lastNameRegister_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="102dp"
        android:layout_marginRight="102dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Enter your last name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/emailRegister_EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameRegister_EditText" />

    <EditText
        android:id="@+id/emailRegister_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="102dp"
        android:layout_marginRight="102dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Enter a valid e-mail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/passwordRegister_EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameRegister_EditText" />

    <EditText
        android:id="@+id/passwordRegister_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="102dp"
        android:layout_marginRight="102dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Enter a password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/confirmPasswordRegister_EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailRegister_EditText" />

    <Button
        android:id="@+id/goBack_MainPage_Button"
        android:layout_width="154dp"
        android:layout_height="55dp"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="129dp"
        android:layout_marginRight="129dp"
        android:layout_marginBottom="50dp"
        android:text="Go back to main page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

    <EditText
        android:id="@+id/confirmPasswordRegister_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="102dp"
        android:layout_marginRight="102dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Re-type the password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegister_EditText" />

</androidx.constraintlayout.widget.ConstraintLayout>